--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,7 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#d59b25, #946300);
   z-index: 1000;
-  transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.8s 1s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -822,7 +822,7 @@ body {
   z-index: 1500;
   opacity: 0;
   width: 0;
-  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 0.8s 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .navigation__list {
